--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^2.1.3",
     "sort-by": "^0.0.2"
