--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^2.1.3",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "react-owl-carousel": "^2.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
