--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.22.0",
     "framer-motion": "^10.12.7",
     "localforage": "^1.10.0",
+    "luxon": "^3.3.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
