--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.8.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^2.1.3",
